syntax = "proto3";

package helloWorld;

// Specify the Go package name and path
option go_package = "go_generated/helloWorld";

// The service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}

  rpc SayHelloAgain (HelloRequest) returns (HelloResponse) {}

  rpc SayHelloStreamReply (HelloRequest) returns (stream HelloResponse) {}

  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloResponse {
  string message = 1;
}